<?xml version="1.0" encoding="UTF-8"?>
<!--
 Licensed to the Apache Software Foundation (ASF) under one
 or more contributor license agreements.  See the NOTICE file
 distributed with this work for additional information
 regarding copyright ownership.  The ASF licenses this file
 to you under the Apache License, Version 2.0 (the
 "License"); you may not use this file except in compliance
 with the License.  You may obtain a copy of the License at

    http://www.apache.org/licenses/LICENSE-2.0

 Unless required by applicable law or agreed to in writing,
 software distributed under the License is distributed on an
 "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
 KIND, either express or implied.  See the License for the
 specific language governing permissions and limitations
 under the License.
-->
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">

    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>org.apache</groupId>
        <artifactId>apache</artifactId>
        <version>40</version>
        <relativePath />
    </parent>

    <groupId>org.apache.aries.spifly</groupId>
    <artifactId>spifly</artifactId>
    <version>1.3.9-SNAPSHOT</version>
    <name>Apache Aries SPI Fly</name>
    <packaging>pom</packaging>
    <description>
        SPI support for OSGi
    </description>

    <scm>
        <connection>scm:git:git@github.com:apache/aries.git</connection>
        <developerConnection>scm:git:git@github.com:apache/aries.git</developerConnection>
        <url>https://github.com/apache/aries</url>
        <tag>HEAD</tag>
    </scm>

    <properties>
        <maven.compiler.source>8</maven.compiler.source>
        <maven.compiler.target>8</maven.compiler.target>
        <java.source.version>8</java.source.version>

        <asm.version>9.10.1</asm.version>
        <assertj.version>3.27.7</assertj.version>
        <bnd.version>6.4.1</bnd.version>
        <bnd-maven-plugins.version>6.4.0</bnd-maven-plugins.version>
        <easymock.version>5.7.0</easymock.version>
        <felix.framework.version>7.0.5</felix.framework.version>
        <felix.log.extension.version>1.0.0</felix.log.extension.version>
        <felix.log.version>1.3.2</felix.log.version>
        <felix.logback.version>1.0.6</felix.logback.version>
        <flatten-maven-plugin.version>1.8.0</flatten-maven-plugin.version>
        <junit-jupiter.version>5.14.4</junit-jupiter.version>
        <junit-platform.version>1.14.4</junit-platform.version>
        <junit.version>4.13.2</junit.version>
        <maven-compiler-plugin.version>3.16.0</maven-compiler-plugin.version>
        <aries.javadoc.exclude.packages />
        <maven-dependency-plugin.version>3.11.0</maven-dependency-plugin.version>
        <maven-enforcer-plugin.version>3.6.3</maven-enforcer-plugin.version>
        <maven-surefire-plugin.version>3.6.0</maven-surefire-plugin.version>
        <mockito.core.version>4.11.0</mockito.core.version>
        <org.apache.aries.versioning.plugin.version>0.3.1</org.apache.aries.versioning.plugin.version>
        <osgi.core.version>8.0.0</osgi.core.version>
        <osgi.test.version>1.3.0</osgi.test.version>
        <slf4j.version>2.0.19</slf4j.version>
    </properties>

    <modules>
        <module>spi-fly-core</module>
        <module>spi-fly-weaver</module>
        <module>spi-fly-dynamic-bundle</module>
        <module>spi-fly-dynamic-framework-extension</module>
        <module>spi-fly-static-tool</module>
        <module>spi-fly-static-bundle</module>
        <module>spi-fly-examples</module>
        <module>spi-fly-itests</module>
    </modules>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>org.osgi</groupId>
                <artifactId>osgi.core</artifactId>
                <version>${osgi.core.version}</version>
            </dependency>
            <dependency>
                <groupId>org.slf4j</groupId>
                <artifactId>slf4j-simple</artifactId>
                <scope>test</scope>
                <version>${slf4j.version}</version>
            </dependency>
            <dependency>
                <groupId>junit</groupId>
                <artifactId>junit</artifactId>
                <version>${junit.version}</version>
                <scope>test</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>
    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.aries.versioning</groupId>
                    <artifactId>org.apache.aries.versioning.plugin</artifactId>
                    <version>${org.apache.aries.versioning.plugin.version}</version>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>${maven-compiler-plugin.version}</version>
                    <configuration>
                        <debug>true</debug>
                        <showDeprecation>true</showDeprecation>
                        <showWarnings>true</showWarnings>
                        <source>${maven.compiler.source}</source>
                        <target>${maven.compiler.target}</target>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-dependency-plugin</artifactId>
                    <version>${maven-dependency-plugin.version}</version>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-enforcer-plugin</artifactId>
                    <version>${maven-enforcer-plugin.version}</version>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-surefire-plugin</artifactId>
                    <version>${maven-surefire-plugin.version}</version>
                    <configuration>
                        <redirectTestOutputToFile>true</redirectTestOutputToFile>
                        <argLine>
                            -enableassertions
                        </argLine>
                        <failIfNoTests>false</failIfNoTests>
                        <workingDirectory>${project.build.directory}</workingDirectory>
                        <excludes>
                            <exclude>**/Abstract*.java</exclude>
                            <exclude>**/Test*.java</exclude>
                        </excludes>
                        <includes>
                            <include>**/*Test.java</include>
                        </includes>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.codehaus.mojo</groupId>
                    <artifactId>properties-maven-plugin</artifactId>
                    <version>1.2.1</version>
                </plugin>
            </plugins>
        </pluginManagement>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-enforcer-plugin</artifactId>
            </plugin>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>flatten-maven-plugin</artifactId>
                <version>${flatten-maven-plugin.version}</version>
                <configuration>
                    <flattenMode>oss</flattenMode>
                </configuration>
                <executions>
                    <execution>
                        <id>flatten</id>
                        <phase>process-resources</phase>
                        <goals>
                            <goal>flatten</goal>
                        </goals>
                    </execution>
                    <execution>
                        <id>flatten-clean</id>
                        <phase>clean</phase>
                        <goals>
                            <goal>clean</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-javadoc-plugin</artifactId>
                <configuration>
                    <source>${java.source.version}</source>
                    <quiet>true</quiet>
                    <excludePackageNames>${aries.javadoc.exclude.packages}</excludePackageNames>
                </configuration>
                <executions>
                    <execution>
                        <id>attach-javadocs</id>
                        <goals>
                            <goal>jar</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.rat</groupId>
                <artifactId>apache-rat-plugin</artifactId>
                <executions>
                    <execution>
                        <phase>verify</phase>
                        <goals>
                            <goal>check</goal>
                        </goals>
                    </execution>
                </executions>
                <configuration>
                    <outputFile>${project.build.directory}/${project.build.finalName}.rat</outputFile>
                    <excludeSubProjects>false</excludeSubProjects>
                    <inputExcludes>
                        <inputExclude>**/target/**/*</inputExclude>
                        <inputExclude>**/appended-resources/**/*</inputExclude>
                        <inputExclude>**/dependency-reduced-pom.xml</inputExclude>
                        <inputExclude>**/velocity.log</inputExclude>
                        <inputExclude>**/DEPENDENCIES</inputExclude>
                        <!-- exclude IntelliJ IDEA generated files -->
                        <inputExclude>**/*.iml</inputExclude>
                        <inputExclude>**/*.ipr</inputExclude>
                        <inputExclude>**/*.iws</inputExclude>
                        <inputExclude>**/.idea/**/*</inputExclude>
                        <!-- exclude Eclipse IDE generated files -->
                        <inputExclude>**/.project</inputExclude>
                        <inputExclude>**/.classpath</inputExclude>
                        <inputExclude>**/.settings/**</inputExclude>
                        <inputExclude>**/.vscode/settings.json</inputExclude>
                        <inputExclude>**/eclipse-classes/**/*</inputExclude>
                        <!-- manifest files don't support comments so don't contain the ASL2.0 header -->
                        <inputExclude>**/*.MF</inputExclude>
                        <!--RAT doesn't seem to recognize MIT style licenses-->
                        <inputExclude>manual/src/styles/print.css</inputExclude>
                        <!-- RAT doesn't recognize BSD license in transaction-manager logger -->
                        <inputExclude>**/objectweb/howl/log/Logger.java</inputExclude>
                        <!--RAT doesn't seem to recognize W3C license -->
                        <inputExclude>**/xml.xsd</inputExclude>
                        <inputExclude>.gitignore</inputExclude>
                        <inputExclude>changelog.md</inputExclude>
                        <inputExclude>README.md</inputExclude>
                        <inputExclude>*.cfg</inputExclude>
                        <inputExclude>**/README.md</inputExclude>
                        <inputExclude>**/Readme.md</inputExclude>
                        <inputExclude>**/NOTICE.vm</inputExclude>
                        <inputExclude>**/dependency-reduced-pom.xml</inputExclude>
                        <inputExclude>**/src/main/resources/META-INF/services/*</inputExclude>
                        <inputExclude>**/src/main/resources/org/apache/aries/spifly/test/blah.txt</inputExclude>
                        <inputExclude>tck/apply-to-tck.sh</inputExclude>
                    </inputExcludes>
                </configuration>
            </plugin>
        </plugins>
    </build>

    <profiles>
        <profile>
            <id>java-above-8</id>
            <activation>
                <jdk>[9,)</jdk>
            </activation>
            <build>
                <pluginManagement>
                    <plugins>
                        <plugin>
                            <groupId>org.apache.maven.plugins</groupId>
                            <artifactId>maven-surefire-plugin</artifactId>
                            <version>${maven-surefire-plugin.version}</version>
                            <configuration>
                                <redirectTestOutputToFile>true</redirectTestOutputToFile>
                                <argLine>
                                    -enableassertions
                                    --add-opens java.base/java.lang=ALL-UNNAMED
                                </argLine>
                                <failIfNoTests>false</failIfNoTests>
                                <workingDirectory>${project.build.directory}</workingDirectory>
                                <excludes>
                                    <exclude>**/Abstract*.java</exclude>
                                    <exclude>**/Test*.java</exclude>
                                </excludes>
                                <includes>
                                    <include>**/*Test.java</include>
                                </includes>
                            </configuration>
                        </plugin>
                    </plugins>
                </pluginManagement>
            </build>
        </profile>
        <profile>
            <id>java8</id>
            <activation>
                <jdk>1.8</jdk>
            </activation>
            <properties>
                <version.apache-rat-plugin>0.17</version.apache-rat-plugin>
            </properties>
        </profile>
        <profile>
            <id>java9to16</id>
            <activation>
                <jdk>(8,17)</jdk>
            </activation>
            <properties>
                <version.apache-rat-plugin>0.17</version.apache-rat-plugin>
            </properties>
        </profile>
    </profiles>
</project>
